<resources>
    <string name="app_name">SmartyCats</string>

    <string name="user_name">Erik J</string>
    <string name="welcome_message">Hello,</string>

    <string name="heading_quick_view">At A Glance</string>
    <string name="heading_upcoming_tests">Upcoming Tests:</string>
    <string name="heading_upcoming_assignments">Upcoming Assignments:</string>

    <string name="number_1">4</string>
    <string name="number_2">6</string>

    <string name="search_bar_message">What\'re you looking for?</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="menu_icon">Menu Icon</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navi">Close Navigation Drawer</string>
    <string name="Tagline">Helping Bobcats reach their goals!</string>
    <string name="msu_bobcat_logo_content_description">MSU Bobcat Logo</string>
    <string name="home">Home</string>
    <string name="classes">Classes</string>
    <string name="students">Students</string>
    <string name="assignments">Assignments</string>

    <string name="viewpager_title_1">Spring Commencement Photos</string>
    <string name="viewpager_title_2">Two Montana State counseling students receive prestigious fellowship</string>
    <string name="viewpager_title_3">Montana State wins $1 million grant to explore quantum economy potential</string>

    <string name="viewpager_desc_1">Congratulations to the graduates of Montana State University\'s spring Class of 2023 who were awarded degrees during its 138th commencement ceremonies on Friday, May 12, at the Brick Breeden Fieldhouse.</string>
    <string name="viewpager_desc_2">Two Montana State University students who plan to use their education to provide mental health counseling services to underserved populations have been awarded a coveted fellowship to help them meet their goals.</string>
    <string name="viewpager_desc_3">As part of a new project funded with $1 million from the National Science Foundation, Montana State University will explore ways to leverage its expertise in photonics to grow a regional economy for precision agriculture and other technologies involving autonomous systems.</string>
</resources>